--- a/index1.css
+++ b/index1.css
@@ -178,7 +178,7 @@
     font-size: 15px;
     font-weight: bolder;
 }
-.multicolor1{
+/* .multicolor1{
     text-align: center;
     font-size: larger;
     font-weight: bolder;
@@ -186,7 +186,7 @@
     background-color: red;
     margin-top: 20px;
     height: 40px;
-}
+} */
 /* .flex-container2{
     display: flex;
     margin-top: 20px;
@@ -238,7 +238,7 @@
     height: 100px;
     width: 1200px;
 } */
- .footer{ 
+ /* .footer{ 
     background-color: aqua;
     color: black;
     text-align: center;
@@ -246,61 +246,46 @@
     font-size: larger;
     height: 20px;
     margin-top: 20px;
-} 
-.grid-container{
+}  */
+.box-container{
     display: grid;
-    grid-template-columns: 300px 300px 300px 130px;
-    grid-template-rows: 70px 100px 100px 100px;
-    column-gap: 30px;
-    row-gap: 5px;
+    grid-template-columns: repeat(3,1fr)100px;
+    grid-template-rows: 60px 100px 200px 60px;
+    grid-gap: 20px;
+    width: 75%;
+    margin: 50px auto;
+    text-align: center;
 }
-.grid-item1{
-     background-color: brown;
+.box-item1{
+     background-color: red;
+     grid-column: 1/5;
      color: wheat;
-     font-size: larger;
-     font-weight: bolder;
-     margin-top: 20px;
-     margin-left: 20px;
 }
-.grid-item2{
-    background-color: brown;
+.box-item2{
+    background-color: yellowgreen;
     color: wheat;
-    font-size: larger;
-    font-weight: bolder;
-    margin-top: 20px;
 }
-.grid-item3{
-    background-color: brown;
+.box-item3{
+    background-color: blueviolet;
     color: wheat;
-    font-size: larger;
-    font-weight: bolder;
-    margin-top: 20px;
 }
-.grid-item4{
+.box-item4{
+    background-color: gray;
+    color: wheat;
+}
+.box-item5{
     background-color: black;
     color: wheat;
-    text-align: center;
-    text-decoration: underline;
-    margin-top: 20px;
-    height: 180px;
+    grid-row: 2/4;
+    grid-column: 4/5;
 }
-.grid-item5{
-    background-color: brown;
+.box-item6{
+    background-color: orange;
     color: wheat;
-    font-size: larger;
-    font-weight: bolder;
-    margin-left: 20px;
-    width: 940px;
-    height: 100px;
+    grid-column: 1/4;
 }
-/* .grid-item6{
+.box-item7{
     background-color: aqua;
     color: black;
-    font-size: larger;
-    font-weight: bolder;
-    text-align: center;
-    height: 100px;
-    width: 900px;
-    margin-top: 120px;
-    margin-left: 0px;
-} */
+    grid-column: 1/5;
+}
